# pacseek

./: .gitignore  .woodpecker.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  get.sh  install.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  USAGE.md  demo.tape  pacseek.1  preview.txt
packaging/: .SRCINFO  PKGBUILD
pacseek design/design_handoff_pacseek/: Package Manager.dc.html  README.md
src/: main.cpp  theme.hpp
src/app/: app.cpp  app.hpp  app_state.hpp  first_run.cpp  first_run.hpp
src/config/: collections.cpp  collections.hpp  config.cpp  config.hpp  keybindings.hpp
src/data/: alpm_source.cpp  alpm_source.hpp  composite_source.cpp  composite_source.hpp  flatpak_source.cpp  flatpak_source.hpp  homebrew_source.cpp  homebrew_source.hpp  mock_source.cpp  mock_source.hpp  node_source.cpp  node_source.hpp  package_source.hpp
src/model/: catalog.cpp  catalog.hpp  collection.cpp  collection.hpp  package.cpp  package.hpp  package_detail.hpp
src/system/: aur_client.cpp  aur_client.hpp  transaction.cpp  transaction.hpp
src/ui/: components.cpp  components.hpp
tests/: pacseek_tests.cpp
